list spacing fixes

--- a/group/blocks/fragment/fragment.css
+++ b/group/blocks/fragment/fragment.css
@@ -123,5 +123,6 @@
 
   .fragment-container.two-col > .fragment-wrapper > div {
     flex: 1;
+    max-width: 50%;
   }
 }
